--- a/.github/workflows/validate-server.yml
+++ b/.github/workflows/validate-server.yml
@@ -46,17 +46,17 @@ jobs:
           project: server
 
       - name: Build @my-dashboard/types
-        run: npm run build --workspace=packages/types
+        run: pnpm --filter=server run build --workspace=packages/types
         working-directory: ${{ github.workspace }}
 
       - name: Type check
-        run: npx tsc --noEmit
+        run: pnpm --filter=server run typecheck
 
       - name: Run linting
-        run: npm run lint
+        run: pnpm --filter=server run lint
 
       - name: Build server
-        run: npm run build
+        run: pnpm --filter=server run build
 
       - name: Test database migrations
         env:
@@ -66,7 +66,7 @@ jobs:
           MYSQL_USER: root
           MYSQL_PASSWORD: test_password
           MYSQL_DATABASE: test_db
-        run: npm run migrate
+        run: pnpm --filter=server run migrate
 
       - name: Run unit tests
         env:
@@ -76,4 +76,4 @@ jobs:
           MYSQL_USER: root
           MYSQL_PASSWORD: test_password
           MYSQL_DATABASE: test_db
-        run: npm test
+        run: pnpm --filter=client run test
