--- a/.github/workflows/validate-packages-sdk.yml
+++ b/.github/workflows/validate-packages-sdk.yml
@@ -36,8 +36,7 @@ jobs:
       - name: Run type checking
         run: |
           echo "🔍 Running TypeScript compilation (type checking)..."
-          cd packages/sdk
-          npx tsc --noEmit || echo "⚠️ Type checking completed with warnings"
+          pnpm --filter=@my-dashboard/sdk run typecheck || echo "⚠️ Type checking completed with warnings"
 
       - name: Run tests
         run: |
