--- a/.github/workflows/validate-tests-integration.yml
+++ b/.github/workflows/validate-tests-integration.yml
@@ -32,14 +32,14 @@ jobs:
       - name: Run linting
         run: |
           echo "🔍 Running linting on tests/integration-tests..."
-          pnpm run lint --filter=tests/integration-tests || echo "⚠️ No linting configured for tests/integration-tests"
+          pnpm --filter=tests/integration-tests run lint || echo "⚠️ No linting configured for tests/integration-tests"
 
       - name: Run type checking
         run: |
           echo "🔍 Running TypeScript type checking..."
-          pnpm run type-check --filter=tests/integration-tests || echo "⚠️ Type checking completed with warnings"
+          pnpm --filter=tests/integration-tests run typecheck || echo "⚠️ Type checking completed with warnings"
 
       - name: Build tests
         run: |
           echo "🏗️ Building integration tests..."
-          pnpm run build --filter=tests/integration-tests
+          pnpm --filter=tests/integration-tests run build 
