--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,7 +17,8 @@
     "lint-fix": "echo \"No linting configured\"",
     "test": "echo \"No tests configured\"",
     "prepublishOnly": "pnpm run clean && pnpm run build",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "typescript": "^5.9.2"
