--- a/.github/workflows/validate-tests-integration.yml
+++ b/.github/workflows/validate-tests-integration.yml
@@ -15,13 +15,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup validation environment
-        uses: ./.github/actions/setup-validation
-
-      - name: Install dependencies
-        run: |
-          echo "📦 Installing dependencies for tests/integration-tests..."
-          pnpm install --filter=tests/integration-tests
+      - name: Setup Node.js
+        uses: ./.github/actions/setup-node
+        with:
+          node-version: ${{ inputs.node-version }}
+          working-directory: ${{ github.workspace }}
 
       - name: Build required packages
         run: |
