--- a/.github/workflows/validate-client.yml
+++ b/.github/workflows/validate-client.yml
@@ -17,7 +17,7 @@ on:
         description: 'Whether to run bundle size analysis'
         required: false
         type: boolean
-        default: true
+        default: false
 
 jobs:
   validate-client:
