--- a/.github/workflows/validate-tests-integration.yml
+++ b/.github/workflows/validate-tests-integration.yml
@@ -21,23 +21,20 @@ jobs:
           node-version: ${{ inputs.node-version }}
           working-directory: ${{ github.workspace }}
 
-      - name: Build required packages
+      - name: Build dependencies
         run: |
-          echo "🏗️ Building required packages..."
-          pnpm run build --filter=@my-dashboard/types
-          pnpm run build --filter=@my-dashboard/sdk
+          pnpm --filter=@my-dashboard/types run build
+          pnpm --filter=@my-dashboard/sdk run build
+        working-directory: ${{ github.workspace }}
 
       - name: Run linting
         run: |
-          echo "🔍 Running linting on tests/integration-tests..."
           pnpm --filter=tests/integration-tests run lint || echo "⚠️ No linting configured for tests/integration-tests"
 
       - name: Run type checking
         run: |
-          echo "🔍 Running TypeScript type checking..."
           pnpm --filter=tests/integration-tests run typecheck || echo "⚠️ Type checking completed with warnings"
 
       - name: Build tests
         run: |
-          echo "🏗️ Building integration tests..."
           pnpm --filter=tests/integration-tests run build 
