--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -54,35 +54,42 @@ jobs:
     if: needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     uses: ./.github/workflows/validate-server.yml
 
-  # Job 6: Cron validation
+  # Job 6: Mock Server validation
+  validate-mock-server:
+    name: Mock Server
+    needs: [basic-validation, validate-packages-types, validate-packages-sdk]
+    if: needs.basic-validation.outputs.mock-server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
+    uses: ./.github/workflows/validate-mock-server.yml
+
+  # Job 7: Cron validation
   validate-cron:
     name: Cron
     needs: [basic-validation, validate-packages-types, validate-packages-sdk]
     if: needs.basic-validation.outputs.cron-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     uses: ./.github/workflows/validate-cron.yml
 
-  # Job 7: Scripts validation
+  # Job 8: Scripts validation
   validate-scripts:
     name: Scripts
     needs: basic-validation
     if: needs.basic-validation.outputs.scripts-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     uses: ./.github/workflows/validate-scripts.yml
 
-  # Job 8: Tests Integration validation
+  # Job 9: Tests Integration validation
   validate-tests-integration:
     name: Tests Integration
     needs: [basic-validation, validate-packages-types, validate-packages-sdk]
     if: needs.basic-validation.outputs.tests-integration-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     uses: ./.github/workflows/validate-tests-integration.yml
 
-  # Job 9: Tests E2E validation
+  # Job 10: Tests E2E validation
   validate-tests-e2e:
     name: Tests E2E
     needs: [basic-validation, validate-packages-types, validate-packages-sdk]
     if: needs.basic-validation.outputs.tests-e2e-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     uses: ./.github/workflows/validate-tests-e2e.yml
 
-  # Job 10: Documentation validation
+  # Job 11: Documentation validation
   validate-docs:
     name: Documentation
     needs: basic-validation
@@ -91,11 +98,11 @@ jobs:
     with:
       docs-changed: ${{ needs.basic-validation.outputs.docs-changed == 'true' }}
 
-  # Job 11: Integration testing
+  # Job 12: Integration testing
   integration-testing:
     name: Integration Testing
-    needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-server ]
-    if: (needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && needs.validate-server.result == 'success'
+    needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-server, validate-mock-server ]
+    if: (needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && needs.validate-server.result == 'success' && (needs.validate-mock-server.result == 'success' || needs.validate-mock-server.result == 'skipped')
     uses: ./.github/workflows/validate-integration.yml
     secrets:
       API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
@@ -110,7 +117,7 @@ jobs:
       JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
       CIRCLE_CI_TOKEN: ${{ secrets.CIRCLE_CI_TOKEN }}
 
-  # Job 12: E2E testing
+  # Job 13: E2E testing
   e2e-testing:
     name: E2E Testing
     runs-on: ubuntu-latest
@@ -122,13 +129,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: ./.github/actions/setup-node
         with:
-          node-version: '22.16.0'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          node-version: ${{ inputs.node-version }}
+          working-directory: ${{ github.workspace }}
 
       - name: Install Playwright browsers
         working-directory: ./tests/e2e-tests
@@ -253,11 +257,11 @@ jobs:
           sudo lsof -ti:${{ secrets.SERVER_PORT || '3000' }} | xargs -r sudo kill -9 || true
           sudo lsof -ti:${{ secrets.CLIENT_PORT || '5173' }} | xargs -r sudo kill -9 || true
 
-  # Job 13: Final validation and summary
+  # Job 14: Final validation and summary
   validation-summary:
     name: Validation Summary
     runs-on: ubuntu-latest
-    needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, validate-cron, validate-scripts, validate-tests-integration, validate-tests-e2e, validate-docs, integration-testing, e2e-testing ]
+    needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, validate-mock-server, validate-cron, validate-scripts, validate-tests-integration, validate-tests-e2e, validate-docs, integration-testing, e2e-testing ]
     if: always()
     steps:
       - name: Check all validations
@@ -268,6 +272,7 @@ jobs:
           echo "Packages SDK validation: ${{ needs.validate-packages-sdk.result }}"
           echo "Client validation: ${{ needs.validate-client.result }}"
           echo "Server validation: ${{ needs.validate-server.result }}"
+          echo "Mock Server validation: ${{ needs.validate-mock-server.result }}"
           echo "Cron validation: ${{ needs.validate-cron.result }}"
           echo "Scripts validation: ${{ needs.validate-scripts.result }}"
           echo "Tests Integration validation: ${{ needs.validate-tests-integration.result }}"
@@ -282,6 +287,7 @@ jobs:
              [[ "${{ needs.validate-packages-sdk.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-client.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-server.result }}" == "failure" ]] || \
+             [[ "${{ needs.validate-mock-server.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-cron.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-scripts.result }}" == "failure" ]] || \
              [[ "${{ needs.validate-tests-integration.result }}" == "failure" ]] || \
@@ -316,6 +322,7 @@ jobs:
             "${{ needs.validate-packages-sdk.result }}" \
             "${{ needs.validate-client.result }}" \
             "${{ needs.validate-server.result }}" \
+            "${{ needs.validate-mock-server.result }}" \
             "${{ needs.validate-cron.result }}" \
             "${{ needs.validate-scripts.result }}" \
             "${{ needs.validate-tests-integration.result }}" \
