--- a/.github/workflows/validate-cron.yml
+++ b/.github/workflows/validate-cron.yml
@@ -12,7 +12,7 @@ on:
         description: 'Node.js version to use'
         required: false
         type: string
-        default: 'v22.16.0'
+        default: 'v22.19.0'
 
 jobs:
   validate-cron:
@@ -30,15 +30,16 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
           working-directory: ${{ github.workspace }}
+          project: cron
 
       - name: Type check
-        run: npx tsc --noEmit
+        run: pnpm --filter=cron run typecheck
 
       - name: Run linting
-        run: npm run lint
+        run: pnpm --filter=cron run lint
 
       - name: Build cron
-        run: npm run build
+        run: pnpm --filter=cron run build
 
       - name: Run tests
         run: |
