--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -54,5 +55,8 @@
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.5",
     "vitest": "^3.2.4"
+  },
+  "engines": {
+    "node": "v22.19.0"
   }
 }
