--- a/cron/package.json
+++ b/cron/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node src/index.ts",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "config": "^4.1.1",
@@ -25,5 +26,8 @@
     "globals": "^16.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": "v22.19.0"
   }
 }
