--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -11,7 +11,8 @@
     "clean": "rm -rf dist",
     "test": "jest",
     "lint": "eslint src --ext .ts",
-    "lint-fix": "eslint src --ext .ts --fix"
+    "lint-fix": "eslint src --ext .ts --fix",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -37,6 +38,6 @@
     "@typescript-eslint/parser": "^6.13.1"
   },
   "engines": {
-    "node": "v22.16.0"
+    "node": "v22.19.0"
   }
 }
