ci: Update actions

--- a/server/railway.toml
+++ b/server/railway.toml
@@ -1,6 +1,6 @@
 [build]
 buildCommand = "./scripts/railway-server-build.sh"
-# watchPatterns = ["server/**"]
+watchPatterns = ["server/**"]
 
 [source]
 repo = "jayc13/my-dashboard"
