--- a/.github/workflows/deploy-project-documentation.yml
+++ b/.github/workflows/deploy-project-documentation.yml
@@ -23,13 +23,16 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Setup Node.js
-        uses: ./.github/actions/setup-node
+        uses: actions/setup-node@v5
         with:
-          working-directory: ./docs
-          node-version: 'v22.19.0'
-          cache-dependency-path: ./docs/package-lock.json
+          node-version: '22.16.0'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
-      - name: Build site
+      - name: Install documentation dependencies
+        run: npm ci
+
+      - name: Build documentation
         run: npm run build
 
       - name: Upload artifact
