--- a/.github/workflows/deploy-project-documentation.yml
+++ b/.github/workflows/deploy-project-documentation.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - ci/*
 
 jobs:
   build-and-deploy:
@@ -27,7 +28,7 @@ jobs:
         with:
           node-version: '22.16.0'
           cache: 'npm'
-          cache-dependency-path: package-lock.json
+          cache-dependency-path: docs/package-lock.json
 
       - name: Install documentation dependencies
         run: npm ci
