--- a/server/docs/api-documentation/paths/api_notifications.yaml
+++ b/server/docs/api-documentation/paths/api_notifications.yaml
@@ -64,8 +64,8 @@ get:
                 - title
                 - message
                 - type
-                - read
-                - created_at
+                - isRead
+                - createdAt
               properties:
                 id:
                   type: integer
@@ -84,10 +84,10 @@ get:
                   type: string
                   enum: [success, error, info, warning]
                   example: "error"
-                read:
+                isRead:
                   type: boolean
                   example: false
-                created_at:
+                createdAt:
                   type: string
                   format: date-time
                   example: "2025-09-20T10:30:00.000Z"
@@ -100,15 +100,15 @@ get:
                   message: "The E2E tests for my-web-app have failed. Please check the dashboard for details."
                   link: "https://cloud.cypress.io/projects/abc123/runs"
                   type: "error"
-                  read: false
-                  created_at: "2025-09-20T10:30:00.000Z"
+                  isRead: false
+                  createdAt: "2025-09-20T10:30:00.000Z"
                 - id: 2
                   title: "E2E Report Generated"
                   message: "The E2E report for 2025-09-20 has been generated successfully"
                   link: "/e2e-dashboard"
                   type: "success"
-                  read: true
-                  created_at: "2025-09-20T09:00:00.000Z"
+                  isRead: true
+                  createdAt: "2025-09-20T09:00:00.000Z"
     '401':
       description: Unauthorized - Invalid or missing API key
       content:
@@ -125,76 +125,3 @@ get:
             $ref: '../schemas/ValidationError.yaml'
           example:
             error: "Error fetching notifications"
-
-post:
-  operationId: create-notification
-  summary: Create a new notification
-  description: |
-    Create a new system notification.
-    
-    Notifications can be used to alert users about important events, errors, or status updates.
-    Optionally sends push notifications via FCM if configured.
-  tags:
-    - Notifications
-  security:
-    - ApiKeyAuth: []
-  requestBody:
-    required: true
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/NotificationInput.yaml'
-        examples:
-          error_notification:
-            summary: Error notification
-            value:
-              title: "E2E Test Failed"
-              message: "The E2E tests for my-web-app have failed. Please check the dashboard for details."
-              link: "https://cloud.cypress.io/projects/abc123/runs"
-              type: "error"
-          success_notification:
-            summary: Success notification
-            value:
-              title: "Deployment Complete"
-              message: "Application my-web-app has been successfully deployed to production."
-              link: "/deployments/123"
-              type: "success"
-  responses:
-    '201':
-      description: Notification created successfully
-      content:
-        application/json:
-          schema:
-            $ref: '../schemas/Notification.yaml'
-          example:
-            id: 3
-            title: "E2E Test Failed"
-            message: "The E2E tests for my-web-app have failed. Please check the dashboard for details."
-            link: "https://cloud.cypress.io/projects/abc123/runs"
-            type: "error"
-            is_read: false
-            created_at: "2025-09-20T10:30:00.000Z"
-    '400':
-      description: Bad request - Missing required fields
-      content:
-        application/json:
-          schema:
-            $ref: '../schemas/ValidationError.yaml'
-          example:
-            error: "Missing required fields"
-    '401':
-      description: Unauthorized - Invalid or missing API key
-      content:
-        application/json:
-          schema:
-            $ref: '../schemas/ValidationError.yaml'
-          example:
-            error: "Unauthorized: Invalid or missing API key"
-    '500':
-      description: Internal server error
-      content:
-        application/json:
-          schema:
-            $ref: '../schemas/ValidationError.yaml'
-          example:
-            error: "Error creating notification"
